fix date input on ios

--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -575,7 +575,7 @@
                         /* Solution 1 */
                         -webkit-appearance: textfield;
                         -moz-appearance: textfield;
-                        min-width: 100%;
+                        min-width: 95%;
                     }
                     
                     #date::-webkit-calendar-picker-indicator{
